# VoiceTuT-TTS

./: .gitignore  PUBLISH.md  README.md  app.py  generate_samples.py  pyproject.toml
docs/: index.html
docs/audio/: manifest.json
hf_model_card/: README.md
hf_space/: README.md
reference_speakers/: references.json
voicetut_tts/: speakers.py
